docs: ListAvatars Swagger 어노테이션 수정
